--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="container">
 	   <div class="p1">	 
 			<h1>HEALTH PLUSS!</h1> 
-			<p>Are you having problems with your Desktop, Laptop, Tablet or Phone?<br> Do you have a desire for a website? Send me an email detaling your issue.<br> I provide quick solutions for the problems you may face.
+			<p>Are you having problems with your Health, not performing in bed?<<br> Do you have a desire for change? This site is for you.
 			</p>	
 	 
 	 
