--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="container">
 	   <div class="p1">	 
 			<h1>HEALTH PLUSS!</h1> 
-			<p>Are you having problems with your Health, not performing in bed?<<br> Do you have a desire for change? This site is for you.
+			<p>Are you having problems with your Health, not performing in bed?<br> Do you have a desire for change? This site is for you.
 			</p>	
 	 
 	 
