--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
 		</div>
 	</div>
 	 
-	<div class="responsive">   
-		<img src="image/banner1.png">		
-	</div>
+	 <section style="background:#f6f6f6;">
+<div class="content">
+<div class="content-written">
+<h1 style="text-align:center;" class="green">So What Is Food, Health & You?</h1>
+<p>Food, Health &amp; You is an incredible package that offers so <strong>much more </strong>than just a simple docuseries. It has a major point of difference which is that it is a Complete Implementation System that gives people all the tools they need to effortlessly transform their life and secure their future health.&nbsp;</p>
+<p>The system includes the core 8 episodes of the docuseries, 4 bonus never-seen-before episodes plus a companion guide which is like a workbook for every single episode. It also includes an extensive transformational cookbook that shows how easy it can be to enhance their meals for maximum health benefits.&nbsp;</p>
+<p>And finally a bonus book called the &ldquo;The Top 77 Superfoods For Healing&rdquo;. Research has proven the strength of so many superfoods but it can be a nightmare figuring out which you need to treat certain conditions so we&rsquo;ve simplified it all down to one 50 page book.</p>
+<p>Customers will be given the choice of three options… the digital package and the physical. The digital package has a substantial discount on it and is the most affordable option at $99.95.</p>
+<p>The Physical Option includes 12 DVD&rsquo;s &amp; 3 Spiral Bound Books all beautifully packaged together in a sturdy &amp; attractive box. This package also includes instant digital access to the full program in the online members area. This package has proven to be very popular and at $199.95.</p>
+<p>The Combo Option includes full access to the online members are and the full physical package.</p> </div>
+</div>
+</section>
 
 
 	<div class="cat">
