--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 	 
 		</div>
 	</div>
-	 
-	 <section style="background:#f6f6f6;">
+	<div class="responsive">   
+		<img src="image/banner1.png">		
+	</div> 
+	
+	<section style="background:#f6f6f6;">
 <div class="content">
 <div class="content-written">
 <h1 style="text-align:center;" class="green">So What Is Food, Health & You?</h1>
