--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 	 
 	 
 		</div>
+	 <div align="center" class="responsive">   
+		<img src="image/sell.png" class="center">		
 	</div>
-	<div class="responsive">   
-		<img src="image/banner1.png">		
-	</div> 
 	
 	<section style="background:#f6f6f6;">
 <div class="content">
