--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</div>
 	<div class="container">
 	   <div class="p1">	 
-			<h1>HEALTH PLUSS!</h1> 
+			<h1>Food, Health & You</h1> 
 			<p>Are you having problems with your Health, not performing in bed?<br> Do you have a desire for change? This site is for you.
 			</p>	
 	 
