--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <!--<base href="file:///C:/websites/richard/index.html">-->
 <link href="css/styles.css" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
