--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
  
 	<div class="responsive">   
-		<img src="image/banner1.png">		
+		<img src="image/banner1.png" class="responsive">		
 	</div>
 	<div class="container">
 	   <div class="p1">	 
@@ -20,8 +20,8 @@
 	 
 	 
 		</div>
-	 <div align="center" class="responsive">   
-		<img src="image/sell.png" class="center">		
+	 <div align="center" class="container">   
+		<img src="image/sell.png" class="responsive">		
 	</div>
 	
 	<section style="background:#f6f6f6;">
