--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
 <p>The Combo Option includes full access to the online members are and the full physical package.</p> </div>
 </div>
 </section>
+<div class="cat">
+	<li><a href ="https://ninite.com/">Install useful apps (Ninite)
+	 	</a></li>
+</ul>
 
-
-	<div class="cat">
+	<!--<div class="cat">
 	 <h2>USEFUL LINKS</h2>
 	 <ul>	
 	 	<li><a href ="https://www.youtube.com/channel/UCdGwJhlHVFXtkD0HSJ0PmkA?view_as=subscriber">My Youtube Channel
@@ -60,7 +63,7 @@
 		<iframe allowfullscreen="" frameborder="0" height="400" src=" https://maps.google.com/maps?q=13%20commission%20st.%20mon%20repos%20&t=&z=13&ie=UTF8&iwloc=&output=embed">
 		</iframe>
 	</div>
-	</div>
+	</div>-->
  
 	<div class="footer_container">
 			<div class="footer">
