--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 	</div>
 	</div>-->
  
-	<div class="footer">
-			<div class="footer">
-				<footer>
+	<div id="footer" class="col-md-12">
+			<div class="container">
+			 
 
-				<p>&copy 2019 Under construction... | Web Design & Development by Richard R Redhead.</p>
+				<p align="center">&copy 2019 Under construction... | Web Design & Development by Richard R Redhead.</p>
 
-				</footer>
+				 
 		</div>
 	</div>
 </body>
