--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 </div>
 </section>
 <div class="cat">
+	 <h2>USEFUL LINKS</h2>
+	<ul>
 	<li><a href ="https://ninite.com/">Install useful apps (Ninite)
 	 	</a></li>
 </ul>
