--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<li><a href ="https://ninite.com/">Install useful apps (Ninite)
 	 	</a></li>
 </ul>
-
+</div>
 	<!--<div class="cat">
 	 <h2>USEFUL LINKS</h2>
 	 <ul>	
@@ -75,7 +75,7 @@
 
 				 
 		</div>
-	</div>
+	<!--</div>-->
 </body>
 
  
