--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="container">
 	   <div class="p1">	 
 			<h1>Food, Health & You</h1> 
-			<p>Are you having problems with your Health, not feeling energized?<br> Do you have a desire for change? This site is for you.
+			<p>Are you having problems with your health, not feeling energized?<br> Do you have a desire for change? This site is for you.
 			</p>	
 	 
 	 
