--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="container">
 			 
 
-				<p align="center">&copy 2019 Under construction... | Web Design & Development by Richard R Redhead.</p>
+				<p align="center">&copy 2019 Under construction... | Web Design & Development by RRR</p>
 
 				 
 		</div>
