--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!--<base href="file:///C:/websites/richard/index.html">-->
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="l1kjp3TC4z29eMvhXUoI-DJ7JsBb5-KBTmPsohLp9jU" />
 
 </head>
 
