--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 </div>
 </section>
 <div class="cat">
-	 <h2>Link for all info.</h2>
+	 <h2>Get Started</h2>
 	<ul>
-	<li><a href ="https://d7d9fjv3w2di19ddn3nh7e6lvn.hop.clickbank.net/">Click here to Get Started.
+	<li><a href ="https://d7d9fjv3w2di19ddn3nh7e6lvn.hop.clickbank.net/">Click Here.
 	 	</a></li>
 </ul>
 </div>
