--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="google-site-verification" content="l1kjp3TC4z29eMvhXUoI-DJ7JsBb5-KBTmPsohLp9jU" />
-<link href="images/favicon.png" rel="icon" type="image/png">
+<link href="image/favicon.png" rel="icon" type="image/png">
 
 </head>
 
