--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 </section>
 <div class="cat">
-	 <h2>Get Started</h2>
+	 <h2>MORE INFO?</h2>
 	<ul>
 	<li><a href ="https://d7d9fjv3w2di19ddn3nh7e6lvn.hop.clickbank.net/">Click Here.
 	 	</a></li>
