--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="container">
 			 
 
-				<p align="center">&copy 2019 Under construction... | Web Design & Development by RRR</p>
+				<p align="center">&copy 2019 | Web Design & Development by RRR</p>
 
 				 
 		</div>
