--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <head><title>HEALTH PLUSS</title>
-
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	
+<meta name="keywords" content="Health, obesity, cancer, diabeties, sickness, burn fat, loose weight, gluten free, gluten,nutrition, stress, toxins, autoimmune, wellness, sugar.">	
+	
+	
+	
 <!--<base href="file:///C:/websites/richard/index.html">-->
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
