--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head><title>HEALTH PLUSS</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
+
+<meta name="description" content="Finally Revealed: How Dr. Carl Bamlet and others have fought and beat cancer, obesity, type 2 diabetes, autoimmune diseases and more - Without going hungry! &amp; Food, health, healthy, cancer, diabeties, natural, cook books.">	
+
 <meta name="keywords" content="Health, obesity, cancer, diabeties, sickness, burn fat, loose weight, gluten free, gluten,nutrition, stress, toxins, autoimmune, wellness, sugar.">	
 	
 	
