--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta name="description" content="Finally Revealed: How Dr. Carl Bamlet and others have fought and beat cancer, obesity, type 2 diabetes, autoimmune diseases and more - Without going hungry! &amp; Food, health, healthy, cancer, diabeties, natural, cook books.">	
 
-<meta name="keywords" content="Health, obesity, cancer, diabetes, sickness, burn fat, loose weight, gluten free, gluten,nutrition, stress, toxins, autoimmune, wellness, sugar, healthy eating.">	
+<meta name="keywords" content="Health, obesity, cancer, diabetes, burn fat, loose weight, gluten free, gluten, nutrition, stress, toxins, autoimmune, wellness, sugar, healthy eating.">	
 	
 	
 	
